@@ -14,6 +14,7 @@
 <a href='/news.html'>News</a> |
 <a href='/kwalitee.html'>Kwalitee</a> |
 <a href='/highscores/'>The CPANTS game</a> |
+<a href='/stats.html'>Stats</a> |
 <a href='/graphs.html'>Graphs</a> &nbsp; &nbsp; || &nbsp; &nbsp;
 <a href='/dist/search'>Distributions</a> | 
 <a href='/author/search'>Authors</a> 
